[package]
name = "marinade-onchain-helper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "marinade_onchain_helper"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
solana-program = "1.9.9"
marinade-finance = { path = "../liquid-staking-program/programs/marinade-finance/",features = ["no-entrypoint"]}
#marinade-finance = { git = "https://github.com/marinade-finance/liquid-staking-program" }
